# pso_omp_kru0144

./: .gitlab-ci.yml  CMakeLists.txt  cm  cm2  report.html  run.sh
lib/: pso.h
src/: CMakeLists.txt  main.c  pso.c
